# face-attendance

./: .gitignore  CMakeLists.txt  README.md
src/: logger.cpp  logger.h  main.cpp  recognizer.cpp  recognizer.h  trainer.cpp  trainer.h
